@@ -1,5 +1,9 @@
 2013-02-26  Ramon Casero  <rcasero@gmail.com>
 
+	* matlab/ManifoldToolbox/smdscale.m: (v0.3.1)
+
+	- Make opt.maxiter the default stopping criterion.
+
 	* matlab/test/test_smdscale.m: (v0.2.1)
 
 	- Minor, changes to figure titles.
